<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    tools:context=".ui.main.MainActivity"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_4">

        <LinearLayout
            android:id="@+id/confirmedLayout"
            style="@style/LayoutStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/light_red"
            app:layout_constraintBottom_toTopOf="@+id/recoverLayout"
            app:layout_constraintEnd_toStartOf="@+id/activeLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                style="@style/ImageIcon"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:contentDescription="@string/confirmed"
                android:src="@drawable/ic_virus"
                android:tint="@color/dark_red" />

            <TextView
                android:id="@+id/textConfirmed"
                style="@style/TextCount"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:textAlignment="center"
                android:textColor="@color/dark_red"
                app:autoSizeMaxTextSize="40sp"
                app:autoSizeMinTextSize="5sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                tools:text="1138000" />

            <TextView
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmed"
                android:textColor="@color/dark_red" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activeLayout"
            style="@style/LayoutStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/light_blue"
            app:layout_constraintBottom_toTopOf="@+id/deathLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/confirmedLayout"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                style="@style/ImageIcon"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:contentDescription="@string/active"
                android:src="@drawable/ic_patient"
                android:tint="@color/dark_blue" />

            <TextView
                android:id="@+id/textActive"
                style="@style/TextCount"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:textAlignment="center"
                app:autoSizeMaxTextSize="40sp"
                app:autoSizeMinTextSize="5sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                android:textColor="@color/dark_blue"
                tools:text="1138" />

            <TextView
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:textColor="@color/dark_blue" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/recoverLayout"
            style="@style/LayoutStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/light_green"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toStartOf="@+id/deathLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmedLayout">

            <ImageView
                style="@style/ImageIcon"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:contentDescription="@string/recovered"
                android:src="@drawable/ic_heart"
                android:tint="@color/dark_green" />

            <TextView
                android:id="@+id/textRecovered"
                style="@style/TextCount"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:textAlignment="center"
                app:autoSizeMaxTextSize="40sp"
                app:autoSizeMinTextSize="5sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                android:textColor="@color/dark_green"
                tools:text="1138" />

            <TextView
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovered"
                android:textColor="@color/dark_green" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/deathLayout"
            style="@style/LayoutStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/light_yellow"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/recoverLayout"
            app:layout_constraintTop_toBottomOf="@+id/activeLayout">

            <ImageView
                style="@style/ImageIcon"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:contentDescription="@string/deaths"
                android:src="@drawable/ic_death"
                android:tint="@color/dark_yellow" />

            <TextView
                android:id="@+id/textDeceased"
                style="@style/TextCount"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:textAlignment="center"
                app:autoSizeMaxTextSize="40sp"
                app:autoSizeMinTextSize="5sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                android:textColor="@color/dark_yellow"
                tools:text="1138" />

            <TextView
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deaths"
                android:textColor="@color/dark_yellow" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:minHeight="60dp"
            android:onClick="sendMessage"
            android:padding="5dp"
            android:text="@string/butonMain"
            android:textColor="#F1511B"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:elevation="5dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonEssentials"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoverLayout"
            app:strokeColor="#F1511B" />

        <Button
            android:id="@+id/buttonEssentials"
            style="?attr/materialButtonOutlinedStyle"
            android:textColor="#a51017"
            app:cornerRadius="5dp"
            app:strokeColor="#a51017"
            app:elevation = "5dp"
            android:minHeight="60dp"
            android:padding="5dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openEssentialActivity"
            android:text="@string/btnEssentialText"
            app:layout_constraintBottom_toTopOf="@+id/buttonGovtApps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"/>

        <Button
            android:id="@+id/buttonGovtApps"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:onClick="openAppResourceActivity"
            android:padding="5dp"
            android:text="@string/important_governemnt_apps"
            android:textColor="#4131AE"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:elevation = "5dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonFaq"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonEssentials"
            app:strokeColor="#4131AE" />

        <Button
            android:id="@+id/buttonFaq"
            style="?attr/materialButtonOutlinedStyle"
            android:textColor="#000000"
            app:cornerRadius="5dp"
            app:strokeColor="#000000"
            app:elevation = "5dp"
            android:minHeight="60dp"
            android:padding="5dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openFAQActivity"
            android:shadowColor="#FFFFFF"
            android:text="@string/important_facts"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonGovtApps" />

        <TextView
            android:id="@+id/bindData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            tools:text="1138"
            tools:visibility="invisible"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
